--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "buttergunbackend",
+  "name": "syahrilsumerybackend",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
